ART 2.5.3
* Enable multi parameter to act as a master for chained parameters

ART 2.5.2
* Fix for error when drill down column has a null value
* Updated French translation (thanks to Eric Lemesre)
* Minor html tag corrections (thanks to Eric Lemesre)
* Left align text in htmlDataTable and htmlPlain view modes
* Added DataTable translations for Spanish and Portuguese
* Allow display of 0 for numbers when value is null
* Allow chained parameter lov to use dynamic datasource filter
* Left align first column text in crosstab queries

ART 2.5.1
* Added Portuguese translation (thanks to Edson Richter)
* Added Spanish translation (thanks to Carlos Narvaez)
* Updated French translation (thanks to Eric Lemesre)
* Allow custom path for export files (thanks to ckb)
* Enable display of blank space instead of "null" for null fields (thanks to ckb)
* Fix for query name truncated to 25 characters
* Fix for start query not displaying
* Fix for invalid drill down queries link
* Fix for not being able to define email jobs in Italian and Portuguese locales
* Added some 2D charts
* Allow use of jndi datasources
* Allow rename and move of queries from the query management console
* Allow xy chart to have multiple series
* Have show results inline as an application setting
* Enable show/hide of parameters box
* Allow specification of random start time for jobs 
* Made graph x-axis label rotate and remove options configurable per query
* Automatically compile all subreports in a jasper report
* Added separate field for uploading subreports used by a jasper report
* Updated jasperreports to 5.0.1

ART 2.5
* Fix for invalid publish job link on linux when reminder email specified
* Support for running DDL/DML statements before query's select statement
* Support for displaying a query in the start page
* Fix for non-ascii values not being saved properly in some admin pages (Thanks to Edson Richter)
* Renamed "Objects" to "Queries" and "Object Groups" to "Query Groups"