@@ -1,5 +1,6 @@
 ART 2.5.3
-* Enable multi parameter to act as a master for chained parameters
+* Enable multi parameter to act as a chained parameter master
+* Allow chained parameter slave to have default values
 
 ART 2.5.2
 * Fix for error when drill down column has a null value
